--- a/css/stilovi.css
+++ b/css/stilovi.css
@@ -1,43 +1,56 @@
-body{
-    display:contents;
-}
-
-.drugi {
+.bg-image {
     animation-name: pomjeri;
     animation-duration: 3s;
     animation-direction: normal;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh;
+    position: relative;
+}
+
+h1 {
     
-    width: 100%;
-    height: 100%;
-    position: absolute; 
-    background-image: url(/img/Screenshot_1.png);
-}
-
-.drugi .tipka1 {
-    animation-name: pomjeri2;
-    animation-duration: 5s;
-    animation-direction:normal;
-    height: 150px;
-    width: 400px;
-    position: fixed;
-    bottom: 120px;
-    margin-left: 130px;
-    border-radius: 20px;
-    font-family:sans-serif;
-    color: rgb(88, 88, 88);
-    box-shadow:0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-    border-color: white;
-    font-size: 50px;
-    background-color: rgb(155, 155, 155);
-}
-.drugi h3 {
     font-family: sans-serif;
-    font-size: 90px;
-    margin-left: 130px;
-    color: rgb(107, 103, 103);
-   
-
+    font-size: 50px;
+    border-bottom: 2px;
+    border-radius:10px;
+    border-style: solid;
+    border-color: rgb(16, 16, 16);
+    display: inline-table;
+    background-color:rgb(53, 53, 53);
+    margin-top: 1px;
+    font-weight: bold;
+    color: white;
 }
+i {
+    color: red;
+    
+    border-radius:10px;
+    
+}
+.container {
+    animation: pomjeri;
+    animation-duration: 3s;
+    animation-direction: normal;
+    height: fit-content;
+    width: fit-content;
+    margin-top: 50px;
+    margin-left: 5px;
+    border: 2px;
+    border-radius: 10px;
+    border-color: red;
+    border-style: solid;
+    display:table;
+    
+}
+.btn {
+    margin-top: 3px;
+    width: 100%;
+}
+
+
+
 @keyframes pomjeri{
     from {
         margin-left: -100%;
@@ -45,91 +58,4 @@ body{
     to {
         margin-left: 0px;
     }
-}
-
-@keyframes pomjeri2{
-    from {
-        margin-left: -100%;
-    }
-    to {
-        margin-right: 350px;
-    }
-}
-
-
-.prvi {
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    overflow: hidden;
-    margin-top: 0%;
-    margin-left: 0%;
-}
-.prvi .images{
-    height: 100%;
-}
-
-.prvi .images img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	display: none;
-    size: 100%;
-}
-
-.prvi .images img:first-child {
-	display: block;
-}
-
-.prvi button {
-    height: 65px;
-    width: 65px;
-    border: none;
-    outline: none;
-    background: rgba(0, 0, 0, 0.5);
-    cursor: pointer;
-    top: 40%;
-    position: absolute;
-	z-index: 999;
-}
-
-.prvi button .arrow {
-    border: solid #fff;
-    border-width: 0 4px 4px 0;
-    display: inline-block;
-    padding: 10px;
-    transition: transform 0.3s ease-out;
-    outline: none;
-}
-
-.prvi #right {
-    right: 0;
-}
-
-.prvi #right .arrow {
-    transform: rotate(-45deg);
-}
-
-.prvi #left {
-    left: 0;
-}
-
-.prvi #left .arrow {
-    transform: rotate(135deg);
-}
-
-
-.loader{
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #003a61;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    animation: spin 5s linear infinite;
-}
-
-@keyframes spin {
-    0% {transform: rotate(0deg)}
-    100% {transform: rotate(360deg);}
 }
