--- a/css/mainpagestyle.css
+++ b/css/mainpagestyle.css
@@ -87,20 +87,14 @@ li {
     flex-wrap: wrap;
 }
 .foter {
-    height: 220px;
+    height: 200px;
     background-color: black;
-    display: flex;
-}
-.main {
     color: rgb(198, 185, 185);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
     align-content: center;
-    margin-left: 50px;
-}
-#logo {
-    margin-left: 90px;
+    display: flex;
+    justify-content:space-evenly;
+    flex-wrap: wrap;
+    
 }
 .overlay {
     position:fixed;
@@ -186,6 +180,93 @@ li {
 }
 .Profil {
     text-align: justify;
+}
+.search_results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    border: #dc3545;
+    border-width: 2px;
+    border-radius: 0px;
+    border-style: solid;
+}
+.all {
+    border: #dc3545;
+    border-width: 2px;
+    border-radius: 0px;
+    border-style: solid;
+    border-top-color: white;
+    border-bottom-color: white;
+}
+.forApi {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: #dc3545;
+    border-width: 2px;
+    border-radius: 0px;
+    border-style: solid;
+    border-top-color: white;
+    border-bottom-color: white;
+}
+.icons {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+    border: #dc3545;
+    border-width: 2px;
+    border-radius: 0px;
+    border-style: solid;
+    border-top-color: white;
+    border-bottom-color: white;
+}
+.pretraga2 {
+    display:none;
+}
+.resultsOfSearch {
+    display: none;
+    flex-direction: column;
+}
+#buttons3 {
+    display: none;
+}
+#pretraga2 {
+    display: none;
+}
+.form_validation {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+    border: #dc3545;
+    border-width: 2px;
+    border-radius: 0px;
+    border-style: solid;
+}
+.post-put {
+    display: none;
+    justify-content: center;
+}
+.post {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.put {
+    display: none;
+}
+.forTipka {
+    display: none;
+    justify-content: center;
+    align-content: center;
+}
+.onlyOne {
+    display: none;
 }
 @media only screen and (max-width: 412px) {
    .head {
